<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

  <com.google.android.material.bottomsheet.BottomSheetDragHandleView
      android:id="@+id/drag_handle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:alpha=".4"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <TextView
      android:id="@+id/confirmTitle"
      style="@style/HeadingSubTitle"
      android:layout_marginTop="24dp"
      android:text="@string/choose_image_from"
      android:textSize="18sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"/>

  <app.cicilan.component.customview.button.CustomButtonMenu
      android:id="@+id/cameraButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:icon="@drawable/icon_camera"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/confirmTitle"
      app:subtitle="@string/kamera_desc"
      app:title="@string/camera"/>

  <com.google.android.material.divider.MaterialDivider
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:dividerColor="?attr/colorSurfaceVariant"
      app:dividerInsetEnd="16dp"
      app:dividerInsetStart="64dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="@+id/cameraButton"/>

  <app.cicilan.component.customview.button.CustomButtonMenu
      android:id="@+id/galeriButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      app:icon="@drawable/icon_storage"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cameraButton"
      app:subtitle="@string/storage_desc"
      app:title="@string/internal_storage"/>

</androidx.constraintlayout.widget.ConstraintLayout>